cl - added keyboard handler & styling

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <HEAD>
 <LINK REL="stylesheet" TYPE="text/css" HREF="/FirePong/ax/firepong.css">
 </HEAD>
-<BODY>
+<BODY ONKEYDOWN="keydown(event)" ONKEYUP="keyup(event)">
 <NOSCRIPT>You need JavaScript enabled to play FirePong.</NOSCRIPT>
-<SPAN CLASS="playbutton" ID="playbutton" ONCLICK="play()">PLAY</SPAN>
+<SPAN CLASS="playtext" ID="playtext">PRESS ANY KEY TO PLAY</SPAN>
 <SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript" SRC="/FirePong/ax/firepong.js"></SCRIPT>
 </BODY>
 </HTML>
