cl - added animation for paddle movement

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <LINK REL="stylesheet" TYPE="text/css" HREF="/FirePong/ax/firepong.css">
 </HEAD>
 <BODY ONKEYDOWN="keydown(event)" ONKEYUP="keyup(event)">
+<SPAN CLASS="paddle" ID="paddleplayer" STYLE="top:50%;margin-top:-100px;"></SPAN>
+<SPAN CLASS="paddle" ID="paddlecpu" STYLE="top:50%;margin-top:-75px;"></SPAN>
 <NOSCRIPT>You need JavaScript enabled to play FirePong.</NOSCRIPT>
 <SPAN CLASS="playtext" ID="playtext">PRESS ANY KEY TO PLAY</SPAN>
 <SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript" SRC="/FirePong/ax/firepong.js"></SCRIPT>
