cl - added basic ball movement

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <LINK REL="stylesheet" TYPE="text/css" HREF="/FirePong/ax/firepong.css">
 </HEAD>
 <BODY ONKEYDOWN="keydown(event)" ONKEYUP="keyup(event)">
+<SPAN ID="ball" STYLE="display:none;"></SPAN>
 <SPAN CLASS="paddle" ID="paddleplayer" STYLE="top:50%;margin-top:-100px;"></SPAN>
 <SPAN CLASS="paddle" ID="paddlecpu" STYLE="top:50%;margin-top:-75px;"></SPAN>
 <NOSCRIPT>You need JavaScript enabled to play FirePong.</NOSCRIPT>
